# mongodb-base-service

./: Cargo.toml
src/: base.rs  error.rs  id.rs
