[package]
name = "mongodb-base-service"
version = "0.6.0"
authors = ["bdbmammoth <bdeboer@noreply.com>"]
edition = "2018"
license = "MIT"
keywords = ["mongodb", "service", "starter"]
readme = "README.md"
description = """
A simple Rust service wrapper to simplify finds, updates, deletes
"""
repository = "https://github.com/briandeboer/mongodb-base-service"


[features]
default = []
graphql = ["juniper"]
test = []

[dependencies]
bson = "1.2.0"
chrono = { version = "0.4.15", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.11"
mongodb-cursor-pagination = { version = "0.3.0", features = ["graphql"], path = "../mongodb-cursor-pagination"}
mongodb = "1.2.0"
serde = { version = "1.0" }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
voca_rs = "1.11"
async-trait = "0.1.42"
juniper = { version = "0.15.3", optional = true }
